--- a/nodesnim/core/scene_builder.html
+++ b/nodesnim/core/scene_builder.html
@@ -97,7 +97,8 @@ function main() {
     </select>
   </div>
   <ul class="simple simple-toc" id="toc-list">
-<li>
+<ul class="simple"><li><a class="reference" id="examples_toc" href="#examples">Examples</a></li>
+</ul><li>
   <a class="reference reference-toplevel" href="#17" id="67">Macros</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#build.m%2Cuntyped"
@@ -120,19 +121,15 @@ function main() {
 <dt><pre><span class="Keyword">macro</span> <a href="#build.m%2Cuntyped"><span class="Identifier">build</span></a><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">untyped</span></pre></dt>
 <dd>
 
-<p>Builds nodes with YML-like syntax.</p>
-<p>Example: .. code-block:: nim</p>
-<blockquote><p><dl class="docutils"><dt>build:</dt>
-<dd><ul class="simple"><li>Scene scene:<ul class="simple"><li>Node test_node</li>
-<li>Label text: call setText(&quot;Hello, world!&quot;)</li>
-<li>Button btn(call setText(&quot;&quot;))</li>
-</ul>
-</li>
-</ul>
-</dd>
-</dl>
-</p></blockquote>
-
+Builds nodes with YML-like syntax.
+<h2><a class="toc-backref" id="examples" href="#examples">Examples</a></h2><pre class="listing"><span class="Identifier">build</span><span class="Punctuation">:</span>
+  <span class="Operator">-</span> <span class="Identifier">Scene</span> <span class="Identifier">scene</span><span class="Punctuation">:</span>
+    <span class="Operator">-</span> <span class="Identifier">Node</span> <span class="Identifier">test_node</span>
+    <span class="Operator">-</span> <span class="Identifier">Label</span> <span class="Identifier">text</span><span class="Punctuation">:</span>
+      <span class="Identifier">call</span> <span class="Identifier">setText</span><span class="Punctuation">(</span><span class="StringLit">&quot;Hello, world!&quot;</span><span class="Punctuation">)</span>
+    <span class="Operator">-</span> <span class="Identifier">Button</span> <span class="Identifier">btn</span><span class="Punctuation">(</span><span class="Identifier">call</span> <span class="Identifier">setText</span><span class="Punctuation">(</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">)</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
+      <span class="Operator">@</span><span class="Identifier">onTouch</span><span class="Punctuation">(</span><span class="Identifier">x</span><span class="Punctuation">,</span> <span class="Identifier">y</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
+        <span class="Identifier">echo</span> <span class="Identifier">x</span><span class="Punctuation">,</span> <span class="StringLit">&quot;, &quot;</span><span class="Punctuation">,</span> <span class="Identifier">y</span></pre>
 
 </dd>
 
@@ -145,7 +142,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-10-17 15:56:37 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-11-03 16:19:12 UTC</small>
       </div>
     </div>
   </div>
