--- a/nodesnim/core/vector2.html
+++ b/nodesnim/core/vector2.html
@@ -101,7 +101,7 @@ function main() {
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#Vector2Obj"
-    title="Vector2Obj = ref object
+    title="Vector2Obj = object
   x*, y*: float"><wbr />Vector2Obj<span class="attachedType"></span></a></li>
 
   </ul>
@@ -117,6 +117,8 @@ function main() {
     title="Vector2(x: float): Vector2Obj"><wbr />Vector2<span class="attachedType">Vector2Obj</span></a></li>
   <li><a class="reference" href="#Vector2"
     title="Vector2(): Vector2Obj"><wbr />Vector2<span class="attachedType">Vector2Obj</span></a></li>
+  <li><a class="reference" href="#newVector2%2CVector2Obj"
+    title="newVector2(vec2: Vector2Obj): ref Vector2Obj"><wbr />new<wbr />Vector2<span class="attachedType">Vector2Obj</span></a></li>
   <li><a class="reference" href="#abs%2CVector2Obj"
     title="abs(a: Vector2Obj): Vector2Obj"><wbr />abs<span class="attachedType">Vector2Obj</span></a></li>
   <li><a class="reference" href="#angle%2CVector2Obj"
@@ -210,7 +212,7 @@ function main() {
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
 <a id="Vector2Obj"></a>
-<dt><pre><a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span>
+<dt><pre><a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
   <span class="Identifier">x</span><span class="Operator">*</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">float</span>
 </pre></dt>
 <dd>
@@ -246,6 +248,13 @@ function main() {
 </dd>
 <a id="Vector2"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#Vector2"><span class="Identifier">Vector2</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="newVector2,Vector2Obj"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#newVector2%2CVector2Obj"><span class="Identifier">newVector2</span></a><span class="Other">(</span><span class="Identifier">vec2</span><span class="Other">:</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Keyword">ref</span> <a href="vector2.html#Vector2Obj"><span class="Identifier">Vector2Obj</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -534,7 +543,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-10-17 15:56:29 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-11-03 16:19:04 UTC</small>
       </div>
     </div>
   </div>
