--- a/nodesnim/nodescontrol/button.html
+++ b/nodesnim/nodescontrol/button.html
@@ -106,14 +106,16 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#ButtonObj"
+      <li><a class="reference" href="#ButtonTouchHandler"
+    title="ButtonTouchHandler = proc (self: ButtonRef; x, y: float)"><wbr />Button<wbr />Touch<wbr />Handler<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#ButtonObj"
     title="ButtonObj = object of LabelObj
   button_mask*: cint           ## Mask for handle clicks
   action_mask*: cint           ## BUTTON_RELEASE or BUTTON_CLICK.
   normal_background*: DrawableRef ## color, when button is not pressed and not hovered.
   hover_background*: DrawableRef ## color, when button hovered.
   press_background*: DrawableRef ## color, when button pressed.
-  on_touch*: proc (self: ButtonRef; x, y: float): void ## This called, when user clicks on button."><wbr />Button<wbr />Obj<span class="attachedType"></span></a></li>
+  on_touch*: ButtonTouchHandler ## This called, when user clicks on button."><wbr />Button<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#ButtonRef"
     title="ButtonRef = ref ButtonObj"><wbr />Button<wbr />Ref<span class="attachedType"></span></a></li>
 
@@ -155,6 +157,13 @@ function main() {
 <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
+<a id="ButtonTouchHandler"></a>
+<dt><pre><a href="button.html#ButtonTouchHandler"><span class="Identifier">ButtonTouchHandler</span></a> <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="ButtonObj"></a>
 <dt><pre><a href="button.html#ButtonObj"><span class="Identifier">ButtonObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="label.html#LabelObj"><span class="Identifier">LabelObj</span></a>
   <span class="Identifier">button_mask</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">cint</span>           <span class="Comment">## Mask for handle clicks</span>
@@ -162,7 +171,7 @@ function main() {
   <span class="Identifier">normal_background</span><span class="Operator">*</span><span class="Other">:</span> <a href="../graphics/drawable.html#DrawableRef"><span class="Identifier">DrawableRef</span></a> <span class="Comment">## color, when button is not pressed and not hovered.</span>
   <span class="Identifier">hover_background</span><span class="Operator">*</span><span class="Other">:</span> <a href="../graphics/drawable.html#DrawableRef"><span class="Identifier">DrawableRef</span></a> <span class="Comment">## color, when button hovered.</span>
   <span class="Identifier">press_background</span><span class="Operator">*</span><span class="Other">:</span> <a href="../graphics/drawable.html#DrawableRef"><span class="Identifier">DrawableRef</span></a> <span class="Comment">## color, when button pressed.</span>
-  <span class="Identifier">on_touch</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span> <span class="Comment">## This called, when user clicks on button.</span>
+  <span class="Identifier">on_touch</span><span class="Operator">*</span><span class="Other">:</span> <a href="button.html#ButtonTouchHandler"><span class="Identifier">ButtonTouchHandler</span></a> <span class="Comment">## This called, when user clicks on button.</span>
   </pre></dt>
 <dd>
 
@@ -200,7 +209,7 @@ function main() {
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
 <a id="draw.e,ButtonRef,GLfloat,GLfloat"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CButtonRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
+<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CButtonRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="button.html#ButtonRef"><span class="Identifier">ButtonRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">ResourceError</span><span class="Other">]</span><span class="Other">,</span>
                                         <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -233,7 +242,7 @@ Handles user input. This uses in the <tt class="docutils literal"><span class="p
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-10-17 15:56:55 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-11-03 16:19:28 UTC</small>
       </div>
     </div>
   </div>
