--- a/nodesnim/nodescontrol/checkbox.html
+++ b/nodesnim/nodescontrol/checkbox.html
@@ -106,12 +106,22 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#CheckBoxRef"
+      <li><a class="reference" href="#ToggleHandler"
+    title="ToggleHandler = proc (self: CheckBoxRef; toggled: bool)"><wbr />Toggle<wbr />Handler<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#CheckBoxRef"
     title="CheckBoxRef = ref object of ControlRef
   enabled*: bool
   box: DrawableRef
   text: LabelRef
-  on_toggle*: proc (self: CheckBoxRef; toggled: bool): void ## This called when switch toggled."><wbr />Check<wbr />Box<wbr />Ref<span class="attachedType"></span></a></li>
+  on_toggle*: ToggleHandler    ## This called when switch toggled."><wbr />Check<wbr />Box<wbr />Ref<span class="attachedType"></span></a></li>
+
+  </ul>
+</li>
+<li>
+  <a class="reference reference-toplevel" href="#9" id="59">Lets</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#toggle_handler"
+    title="toggle_handler: ToggleHandler = proc (self: CheckBoxRef; toggled: bool) = discard"><wbr />toggle_<wbr />handler<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -159,13 +169,32 @@ function main() {
 <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
+<a id="ToggleHandler"></a>
+<dt><pre><a href="checkbox.html#ToggleHandler"><span class="Identifier">ToggleHandler</span></a> <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="checkbox.html#CheckBoxRef"><span class="Identifier">CheckBoxRef</span></a><span class="Other">;</span> <span class="Identifier">toggled</span><span class="Other">:</span> <span class="Identifier">bool</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="CheckBoxRef"></a>
 <dt><pre><a href="checkbox.html#CheckBoxRef"><span class="Identifier">CheckBoxRef</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="control.html#ControlRef"><span class="Identifier">ControlRef</span></a>
   <span class="Identifier">enabled</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
   <span class="Identifier">box</span><span class="Other">:</span> <a href="../graphics/drawable.html#DrawableRef"><span class="Identifier">DrawableRef</span></a>
   <span class="Identifier">text</span><span class="Other">:</span> <a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a>
-  <span class="Identifier">on_toggle</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="checkbox.html#CheckBoxRef"><span class="Identifier">CheckBoxRef</span></a><span class="Other">;</span> <span class="Identifier">toggled</span><span class="Other">:</span> <span class="Identifier">bool</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span> <span class="Comment">## This called when switch toggled.</span>
+  <span class="Identifier">on_toggle</span><span class="Operator">*</span><span class="Other">:</span> <a href="checkbox.html#ToggleHandler"><span class="Identifier">ToggleHandler</span></a>    <span class="Comment">## This called when switch toggled.</span>
   </pre></dt>
+<dd>
+
+
+
+</dd>
+
+</dl></div>
+<div class="section" id="9">
+<h1><a class="toc-backref" href="#9">Lets</a></h1>
+<dl class="item">
+<a id="toggle_handler"></a>
+<dt><pre><a href="checkbox.html#toggle_handler"><span class="Identifier">toggle_handler</span></a><span class="Other">:</span> <a href="checkbox.html#ToggleHandler"><span class="Identifier">ToggleHandler</span></a> <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="checkbox.html#CheckBoxRef"><span class="Identifier">CheckBoxRef</span></a><span class="Other">;</span> <span class="Identifier">toggled</span><span class="Other">:</span> <span class="Identifier">bool</span><span class="Other">)</span> <span class="Other">=</span> <span class="Keyword">discard</span></pre></dt>
 <dd>
 
 
@@ -203,8 +232,8 @@ function main() {
 
 </dd>
 <a id="draw.e,CheckBoxRef,GLfloat,GLfloat"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CCheckBoxRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="checkbox.html#CheckBoxRef"><span class="Identifier">CheckBoxRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CCheckBoxRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="checkbox.html#CheckBoxRef"><span class="Identifier">CheckBoxRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">ResourceError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 This uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
@@ -226,7 +255,7 @@ Duplicates ChechBox object and create a new ChechBox.
 </dd>
 <a id="setText.e,CheckBoxRef,string,bool"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#setText.e%2CCheckBoxRef%2Cstring%2Cbool"><span class="Identifier">setText</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="checkbox.html#CheckBoxRef"><span class="Identifier">CheckBoxRef</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">save_properties</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -257,7 +286,7 @@ Handles user input. This uses in the <tt class="docutils literal"><span class="p
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-10-17 15:57:33 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-11-03 16:20:02 UTC</small>
       </div>
     </div>
   </div>
