--- a/nodesnim/nodescontrol/edittext.html
+++ b/nodesnim/nodescontrol/edittext.html
@@ -106,7 +106,9 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#EditTextRef"
+      <li><a class="reference" href="#EditHandler"
+    title="EditHandler = proc (pressed_key: string)"><wbr />Edit<wbr />Handler<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#EditTextRef"
     title="EditTextRef = ref object of LabelObj
   is_blink, is_select: bool
   caret*, selectable: bool
@@ -114,7 +116,7 @@ function main() {
   caret_color: ColorRef
   hint*: StyleText
   caret_pos: array[2, uint32]
-  on_edit*: proc (pressed_key: string): void ## This called when user press any key."><wbr />Edit<wbr />Text<wbr />Ref<span class="attachedType"></span></a></li>
+  on_edit*: EditHandler        ## This called when user press any key."><wbr />Edit<wbr />Text<wbr />Ref<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -162,6 +164,13 @@ function main() {
 <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
+<a id="EditHandler"></a>
+<dt><pre><a href="edittext.html#EditHandler"><span class="Identifier">EditHandler</span></a> <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">pressed_key</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="EditTextRef"></a>
 <dt><pre><a href="edittext.html#EditTextRef"><span class="Identifier">EditTextRef</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="label.html#LabelObj"><span class="Identifier">LabelObj</span></a>
   <span class="Identifier">is_blink</span><span class="Other">,</span> <span class="Identifier">is_select</span><span class="Other">:</span> <span class="Identifier">bool</span>
@@ -170,7 +179,7 @@ function main() {
   <span class="Identifier">caret_color</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
   <span class="Identifier">hint</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/font.html#StyleText"><span class="Identifier">StyleText</span></a>
   <span class="Identifier">caret_pos</span><span class="Other">:</span> <span class="Identifier">array</span><span class="Other">[</span><span class="DecNumber">2</span><span class="Other">,</span> <span class="Identifier">uint32</span><span class="Other">]</span>
-  <span class="Identifier">on_edit</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">pressed_key</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span> <span class="Comment">## This called when user press any key.</span>
+  <span class="Identifier">on_edit</span><span class="Operator">*</span><span class="Other">:</span> <a href="edittext.html#EditHandler"><span class="Identifier">EditHandler</span></a>        <span class="Comment">## This called when user press any key.</span>
   </pre></dt>
 <dd>
 
@@ -196,8 +205,8 @@ function main() {
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
 <a id="draw.e,EditTextRef,GLfloat,GLfloat"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CEditTextRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextRef"><span class="Identifier">EditTextRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CEditTextRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="edittext.html#EditTextRef"><span class="Identifier">EditTextRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">ResourceError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 This method uses for redraw Label object.
@@ -264,7 +273,7 @@ Handles user input. Thi uses in the <tt class="docutils literal"><span class="pr
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-10-17 15:57:05 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-11-03 16:19:37 UTC</small>
       </div>
     </div>
   </div>
