--- a/nodesnim/nodescontrol/label.html
+++ b/nodesnim/nodescontrol/label.html
@@ -106,12 +106,23 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#LabelObj"
+      <li><a class="reference" href="#TextChangedHandler"
+    title="TextChangedHandler = proc (self: LabelRef; text: string)"><wbr />Text<wbr />Changed<wbr />Handler<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#LabelObj"
     title="LabelObj = object of ControlRef
+  on_text_changed*: TextChangedHandler
   text_align*: AnchorObj
   text*: StyleText"><wbr />Label<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#LabelRef"
     title="LabelRef = ref LabelObj"><wbr />Label<wbr />Ref<span class="attachedType"></span></a></li>
+
+  </ul>
+</li>
+<li>
+  <a class="reference reference-toplevel" href="#9" id="59">Lets</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#text_changed_handler"
+    title="text_changed_handler = proc (self: LabelRef; text: string) = discard"><wbr />text_<wbr />changed_<wbr />handler<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -165,8 +176,16 @@ function main() {
 <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
+<a id="TextChangedHandler"></a>
+<dt><pre><a href="label.html#TextChangedHandler"><span class="Identifier">TextChangedHandler</span></a> <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a><span class="Other">;</span> <span class="Identifier">text</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="LabelObj"></a>
 <dt><pre><a href="label.html#LabelObj"><span class="Identifier">LabelObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="control.html#ControlRef"><span class="Identifier">ControlRef</span></a>
+  <span class="Identifier">on_text_changed</span><span class="Operator">*</span><span class="Other">:</span> <a href="label.html#TextChangedHandler"><span class="Identifier">TextChangedHandler</span></a>
   <span class="Identifier">text_align</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/anchor.html#AnchorObj"><span class="Identifier">AnchorObj</span></a>
   <span class="Identifier">text</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/font.html#StyleText"><span class="Identifier">StyleText</span></a>
 </pre></dt>
@@ -177,6 +196,18 @@ function main() {
 </dd>
 <a id="LabelRef"></a>
 <dt><pre><a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a> <span class="Other">=</span> <span class="Keyword">ref</span> <a href="label.html#LabelObj"><span class="Identifier">LabelObj</span></a></pre></dt>
+<dd>
+
+
+
+</dd>
+
+</dl></div>
+<div class="section" id="9">
+<h1><a class="toc-backref" href="#9">Lets</a></h1>
+<dl class="item">
+<a id="text_changed_handler"></a>
+<dt><pre><a href="label.html#text_changed_handler"><span class="Identifier">text_changed_handler</span></a> <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a><span class="Other">;</span> <span class="Identifier">text</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span class="Other">=</span> <span class="Keyword">discard</span></pre></dt>
 <dd>
 
 
@@ -206,7 +237,7 @@ function main() {
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
 <a id="draw.e,LabelRef,GLfloat,GLfloat"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CLabelRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
+<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CLabelRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">ResourceError</span><span class="Other">]</span><span class="Other">,</span>
                                        <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -241,7 +272,7 @@ Handles user input. Thi uses in the <tt class="docutils literal"><span class="pr
 </dd>
 <a id="setText.e,LabelRef,string,bool"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#setText.e%2CLabelRef%2Cstring%2Cbool"><span class="Identifier">setText</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="label.html#LabelRef"><span class="Identifier">LabelRef</span></a><span class="Other">;</span> <span class="Identifier">text</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">save_properties</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 <p>Changes text.</p>
@@ -308,6 +339,11 @@ Handles user input. Thi uses in the <tt class="docutils literal"><span class="pr
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">RegexError</span><span class="Other">,</span> <span class="Identifier">ResourceError</span><span class="Other">,</span> <span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Changes Label stylesheet.</p>
+<p>Styles:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">text-align</span></tt> - text alignment. <tt class="docutils literal"><span class="pre">0.5</span></tt>; <tt class="docutils literal"><span class="pre">1 0 1 0</span></tt>.</li>
+<li><tt class="docutils literal"><span class="pre">color</span></tt> - text color. <tt class="docutils literal"><span class="pre">#ffef</span></tt>; <tt class="docutils literal"><span class="pre">rgba(1, 1, 1, 1)</span></tt>; <tt class="docutils literal"><span class="pre">rgb(1, 1, 1)</span></tt>.</li>
+</ul>
 
 
 </dd>
@@ -321,7 +357,7 @@ Handles user input. Thi uses in the <tt class="docutils literal"><span class="pr
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-10-17 15:56:52 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-11-03 16:19:26 UTC</small>
       </div>
     </div>
   </div>
