--- a/nodesnim/nodescontrol/slider.html
+++ b/nodesnim/nodescontrol/slider.html
@@ -106,13 +106,15 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#SliderObj"
+      <li><a class="reference" href="#SliderChangedHandler"
+    title="SliderChangedHandler = proc (self: SliderRef; new_value: uint)"><wbr />Slider<wbr />Changed<wbr />Handler<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#SliderObj"
     title="SliderObj = object of ControlRef
   slider_type*: SliderType
   max_value*, value*: uint
   progress_color*: ColorRef
   thumb*: DrawableRef
-  on_changed*: proc (self: SliderRef; new_value: uint): void"><wbr />Slider<wbr />Obj<span class="attachedType"></span></a></li>
+  on_changed*: SliderChangedHandler"><wbr />Slider<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#SliderRef"
     title="SliderRef = ref SliderObj"><wbr />Slider<wbr />Ref<span class="attachedType"></span></a></li>
 
@@ -160,13 +162,20 @@ function main() {
 <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
+<a id="SliderChangedHandler"></a>
+<dt><pre><a href="slider.html#SliderChangedHandler"><span class="Identifier">SliderChangedHandler</span></a> <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="slider.html#SliderRef"><span class="Identifier">SliderRef</span></a><span class="Other">;</span> <span class="Identifier">new_value</span><span class="Other">:</span> <span class="Identifier">uint</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="SliderObj"></a>
 <dt><pre><a href="slider.html#SliderObj"><span class="Identifier">SliderObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="control.html#ControlRef"><span class="Identifier">ControlRef</span></a>
   <span class="Identifier">slider_type</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/enums.html#SliderType"><span class="Identifier">SliderType</span></a>
   <span class="Identifier">max_value</span><span class="Operator">*</span><span class="Other">,</span> <span class="Identifier">value</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">uint</span>
   <span class="Identifier">progress_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
   <span class="Identifier">thumb</span><span class="Operator">*</span><span class="Other">:</span> <a href="../graphics/drawable.html#DrawableRef"><span class="Identifier">DrawableRef</span></a>
-  <span class="Identifier">on_changed</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="slider.html#SliderRef"><span class="Identifier">SliderRef</span></a><span class="Other">;</span> <span class="Identifier">new_value</span><span class="Other">:</span> <span class="Identifier">uint</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span>
+  <span class="Identifier">on_changed</span><span class="Operator">*</span><span class="Other">:</span> <a href="slider.html#SliderChangedHandler"><span class="Identifier">SliderChangedHandler</span></a>
 </pre></dt>
 <dd>
 
@@ -257,7 +266,7 @@ Handles user input. This uses in the <tt class="docutils literal"><span class="p
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-10-17 15:57:13 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-11-03 16:19:44 UTC</small>
       </div>
     </div>
   </div>
