--- a/nodesnim/nodescontrol/switch.html
+++ b/nodesnim/nodescontrol/switch.html
@@ -106,12 +106,14 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#SwitchObj"
+      <li><a class="reference" href="#SwitchHandler"
+    title="SwitchHandler = proc (self: SwitchRef; toggled: bool)"><wbr />Switch<wbr />Handler<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#SwitchObj"
     title="SwitchObj = object of ControlRef
   value*: bool
   color_enable*, color_disable*: ColorRef
   back_enable*, back_disable*: ColorRef
-  on_switch*: proc (self: SwitchRef; toggled: bool): void ## This called when switch toggled."><wbr />Switch<wbr />Obj<span class="attachedType"></span></a></li>
+  on_switch*: SwitchHandler    ## This called when switch toggled."><wbr />Switch<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#SwitchRef"
     title="SwitchRef = ref SwitchObj"><wbr />Switch<wbr />Ref<span class="attachedType"></span></a></li>
 
@@ -155,12 +157,19 @@ function main() {
 <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
+<a id="SwitchHandler"></a>
+<dt><pre><a href="switch.html#SwitchHandler"><span class="Identifier">SwitchHandler</span></a> <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="switch.html#SwitchRef"><span class="Identifier">SwitchRef</span></a><span class="Other">;</span> <span class="Identifier">toggled</span><span class="Other">:</span> <span class="Identifier">bool</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="SwitchObj"></a>
 <dt><pre><a href="switch.html#SwitchObj"><span class="Identifier">SwitchObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="control.html#ControlRef"><span class="Identifier">ControlRef</span></a>
   <span class="Identifier">value</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">bool</span>
   <span class="Identifier">color_enable</span><span class="Operator">*</span><span class="Other">,</span> <span class="Identifier">color_disable</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
   <span class="Identifier">back_enable</span><span class="Operator">*</span><span class="Other">,</span> <span class="Identifier">back_disable</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
-  <span class="Identifier">on_switch</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="switch.html#SwitchRef"><span class="Identifier">SwitchRef</span></a><span class="Other">;</span> <span class="Identifier">toggled</span><span class="Other">:</span> <span class="Identifier">bool</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span> <span class="Comment">## This called when switch toggled.</span>
+  <span class="Identifier">on_switch</span><span class="Operator">*</span><span class="Other">:</span> <a href="switch.html#SwitchHandler"><span class="Identifier">SwitchHandler</span></a>    <span class="Comment">## This called when switch toggled.</span>
   </pre></dt>
 <dd>
 
@@ -237,7 +246,7 @@ Toggles value.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-10-17 15:57:27 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-11-03 16:19:57 UTC</small>
       </div>
     </div>
   </div>
