--- a/nodesnim/nodescontrol/texture_button.html
+++ b/nodesnim/nodescontrol/texture_button.html
@@ -106,14 +106,16 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#TextureButtonObj"
+      <li><a class="reference" href="#TextureButtonTouchHandler"
+    title="TextureButtonTouchHandler = proc (self: TextureButtonRef; x, y: float)"><wbr />Texture<wbr />Button<wbr />Touch<wbr />Handler<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#TextureButtonObj"
     title="TextureButtonObj = object of LabelObj
   button_mask*: cint           ## Mask for handle clicks
   action_mask*: cint           ## BUTTON_RELEASE or BUTTON_CLICK.
   normal_background_texture*: GlTextureObj ## texture, when button is not pressed and not hovered.
   hover_background_texture*: GlTextureObj ## texture, when button hovered.
   press_background_texture*: GlTextureObj ## texture, when button pressed.
-  on_touch*: proc (self: TextureButtonRef; x, y: float): void ## This called, when user clicks on button."><wbr />Texture<wbr />Button<wbr />Obj<span class="attachedType"></span></a></li>
+  on_touch*: TextureButtonTouchHandler ## This called, when user clicks on button."><wbr />Texture<wbr />Button<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#TextureButtonRef"
     title="TextureButtonRef = ref TextureButtonObj"><wbr />Texture<wbr />Button<wbr />Ref<span class="attachedType"></span></a></li>
 
@@ -161,6 +163,13 @@ function main() {
 <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
+<a id="TextureButtonTouchHandler"></a>
+<dt><pre><a href="texture_button.html#TextureButtonTouchHandler"><span class="Identifier">TextureButtonTouchHandler</span></a> <span class="Other">=</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonRef"><span class="Identifier">TextureButtonRef</span></a><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="TextureButtonObj"></a>
 <dt><pre><a href="texture_button.html#TextureButtonObj"><span class="Identifier">TextureButtonObj</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <a href="label.html#LabelObj"><span class="Identifier">LabelObj</span></a>
   <span class="Identifier">button_mask</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">cint</span>           <span class="Comment">## Mask for handle clicks</span>
@@ -168,7 +177,7 @@ function main() {
   <span class="Identifier">normal_background_texture</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/image.html#GlTextureObj"><span class="Identifier">GlTextureObj</span></a> <span class="Comment">## texture, when button is not pressed and not hovered.</span>
   <span class="Identifier">hover_background_texture</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/image.html#GlTextureObj"><span class="Identifier">GlTextureObj</span></a> <span class="Comment">## texture, when button hovered.</span>
   <span class="Identifier">press_background_texture</span><span class="Operator">*</span><span class="Other">:</span> <a href="../core/image.html#GlTextureObj"><span class="Identifier">GlTextureObj</span></a> <span class="Comment">## texture, when button pressed.</span>
-  <span class="Identifier">on_touch</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonRef"><span class="Identifier">TextureButtonRef</span></a><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span> <span class="Comment">## This called, when user clicks on button.</span>
+  <span class="Identifier">on_touch</span><span class="Operator">*</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonTouchHandler"><span class="Identifier">TextureButtonTouchHandler</span></a> <span class="Comment">## This called, when user clicks on button.</span>
   </pre></dt>
 <dd>
 
@@ -207,8 +216,8 @@ function main() {
 <h1><a class="toc-backref" href="#14">Methods</a></h1>
 <dl class="item">
 <a id="draw.e,TextureButtonRef,GLfloat,GLfloat"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CTextureButtonRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonRef"><span class="Identifier">TextureButtonRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">method</span> <a href="#draw.e%2CTextureButtonRef%2CGLfloat%2CGLfloat"><span class="Identifier">draw</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_button.html#TextureButtonRef"><span class="Identifier">TextureButtonRef</span></a><span class="Other">;</span> <span class="Identifier">w</span><span class="Other">,</span> <span class="Identifier">h</span><span class="Other">:</span> <a href="../thirdparty/opengl.html#GLfloat"><span class="Identifier">GLfloat</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">ResourceError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 this method uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>.
@@ -263,7 +272,7 @@ Changes button texture, when it pressed.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2021-10-17 15:57:18 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2021-11-03 16:19:49 UTC</small>
       </div>
     </div>
   </div>
